# DadaScientist_Triple10

./: .gitignore  main.py  pyproject.toml
notebooks/: Ejercicio2_sprint18.ipynb  Ejercicio3_sprint18.ipynb  Ejercicio_sprint18.ipynb  Entrenamiento_Sprint18.ipynb  Sprint1.ipynb  Sprint10.ipynb  Sprint11.ipynb  Sprint12_negocios_oil.ipynb  Sprint13_Oro.ipynb  Sprint14.ipynb  Sprint15.ipynb  Sprint16.ipynb  Sprint17.ipynb  Sprint18_proyecto.ipynb  Sprint18_pytorch.ipynb  Sprint2.ipynb  Sprint3.ipynb  Sprint4.ipynb  Sprint5Revisado.ipynb  Sprint6_videojuegos.ipynb  Sprint8.ipynb  resnet_sprint18.ipynb  run_model_on_gpu.py
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/tmp/: cat_feature_index.4e54a86-1b516c80-7f087a49-d6f2349d.tmp
proyectoFinal/: CONDICIONES.md  ETAPAS.md  etapa1_plan_de_trabajo.md  etapa2_codigo_solucion.ipynb  etapa3_informe_solucion.md
