[project]
name = "proyectos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "lightgbm>=4.6.0",
    "nltk>=3.9.4",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "tensorflow[and-cuda]>=2.21.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "xgboost>=3.2.0",
]
